--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.0.0",
     "@ionic-native/network": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
+    "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/cordova-builders": "^8.0.0",
     "cordova": "^11.1.0",
